--- a/index.html
+++ b/index.html
@@ -1,18 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Private Access</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Welcome Admin 📁</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #121212;
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+    .box {
+      background-color: #1e1e1e;
+      padding: 25px 30px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.7);
+      text-align: center;
+      width: 90%;
+      max-width: 400px;
+    }
+    h2 {
+      margin-bottom: 10px;
+    }
+    .list {
+      list-style: none;
+      padding: 0;
+      text-align: left;
+      margin-top: 20px;
+    }
+    .list li {
+      margin: 15px 0;
+      font-size: 18px;
+    }
+    .list a {
+      text-decoration: none;
+      color: #58a6ff;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+    }
+    .list a:hover {
+      color: #a2d2ff;
+    }
+    .icon {
+      margin-right: 10px;
+      font-size: 20px;
+    }
+  </style>
 </head>
 <body>
-  <div class="login-box">
-    <h2>Enter Password</h2>
-    <input type="password" id="password" placeholder="Password" />
-    <button onclick="checkPassword()">Login</button>
-    <p id="error"></p>
-  </div>
-  <script src="script.js"></script>
-</body>
-</html>
+  <div class="box">
+    <h2>Welcome, Admin 👋</h2>
+    <p>📁 Photos, Videos, Documents below:</p>
+    <ul class="list">
+      <li><a href="Photos/"
