--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Private Site</title>
+  <title>Secure Access</title>
   <style>
     body {
       margin: 0;
-      background: #121212;
-      font-family: sans-serif;
+      background: #0e0e0e;
+      font-family: "Segoe UI", sans-serif;
       color: #fff;
       display: flex;
       justify-content: center;
@@ -17,32 +17,58 @@
     }
 
     .container {
-      background: #1e1e1e;
+      background: #1c1c1c;
       padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      border-radius: 20px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.6);
       width: 90%;
       max-width: 400px;
       text-align: center;
     }
 
-    input {
-      padding: 10px;
+    h2 {
+      margin-bottom: 1.5rem;
+    }
+
+    .input-group {
+      position: relative;
+      width: 100%;
+    }
+
+    input[type="password"], input[type="text"] {
+      padding: 12px 40px 12px 12px;
       width: 100%;
       margin-top: 1rem;
-      border-radius: 6px;
+      border-radius: 10px;
       border: none;
+      background: #2b2b2b;
+      color: #fff;
+      font-size: 1rem;
+    }
+
+    .eye-icon {
+      position: absolute;
+      right: 10px;
+      top: 22px;
+      cursor: pointer;
+      font-size: 1.2rem;
+      color: #aaa;
     }
 
     button {
-      padding: 10px;
+      padding: 12px;
       width: 100%;
-      margin-top: 1rem;
+      margin-top: 1.5rem;
       background: #4caf50;
       color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: 10px;
+      font-size: 1rem;
       cursor: pointer;
+    }
+
+    button:hover {
+      background: #45a049;
     }
 
     #mainContent {
@@ -52,41 +78,25 @@
     }
 
     a {
-      color: #80d4ff;
+      color: #90d8ff;
       text-decoration: underline;
     }
   </style>
 </head>
 <body>
 
-  <!-- Password Screen -->
+  <!-- Password Box -->
   <div class="container" id="loginBox">
-    <h2>Enter Password</h2>
-    <input type="password" id="passwordInput" placeholder="Enter site password" />
+    <h2>🔐 Enter Site Password</h2>
+    <div class="input-group">
+      <input type="password" id="passwordInput" placeholder="Enter password"/>
+      <span class="eye-icon" onclick="togglePassword()">👁️</span>
+    </div>
     <button onclick="checkPassword()">Unlock</button>
   </div>
 
-  <!-- Hidden Main Content -->
+  <!-- Hidden Content -->
   <div id="mainContent">
-    <h1>🎉 Welcome to Secret</h1>
-    <p>This is hidden until the correct password is entered.</p>
-    <a href="videos/Screenrecorder-2025-06-07-11-50-02-782.mp4" download>📹 Download My Video</a>
-    <!-- Add more private content here -->
-  </div>
-
-  <script>
-    function checkPassword() {
-      const correctPassword = "faka@200998";
-      const input = document.getElementById("passwordInput").value;
-
-      if (input === correctPassword) {
-        document.getElementById("loginBox").style.display = "none";
-        document.getElementById("mainContent").style.display = "block";
-      } else {
-        alert("❌ Wrong password!");
-      }
-    }
-  </script>
-
-</body>
-</html>
+    <h1>👋 Welcome</h1>
+    <p>This is your private content area. Files, videos, anything goes here.</p>
+    <a href="videos/Screenrecorder-2025-06
