--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Secure Access</title>
   <style>
@@ -48,11 +48,13 @@
 
     .eye-icon {
       position: absolute;
-      right: 10px;
-      top: 22px;
+      right: 15px;
+      top: 30px;
+      transform: translateY(-50%);
       cursor: pointer;
       font-size: 1.2rem;
       color: #aaa;
+      user-select: none;
     }
 
     button {
@@ -87,9 +89,9 @@
 
   <!-- Password Box -->
   <div class="container" id="loginBox">
-    <h2>🔐 Enter Site Password</h2>
+    <h2>🔐 Enter Password</h2>
     <div class="input-group">
-      <input type="password" id="passwordInput" placeholder="Enter password"/>
+      <input type="password" id="passwordInput" placeholder="Enter site password"/>
       <span class="eye-icon" onclick="togglePassword()">👁️</span>
     </div>
     <button onclick="checkPassword()">Unlock</button>
@@ -99,4 +101,31 @@
   <div id="mainContent">
     <h1>👋 Welcome</h1>
     <p>This is your private content area. Files, videos, anything goes here.</p>
-    <a href="videos/Screenrecorder-2025-06
+    <a href="videos/Screenrecorder-2025-06-07-11-50-02-782.mp4" download>📹 Download My Video</a>
+  </div>
+
+  <script>
+    function checkPassword() {
+      const correctPassword = "Admin@200998";
+      const input = document.getElementById("passwordInput").value;
+
+      if (input === correctPassword) {
+        document.getElementById("loginBox").style.display = "none";
+        document.getElementById("mainContent").style.display = "block";
+      } else {
+        alert("❌ Incorrect password");
+      }
+    }
+
+    function togglePassword() {
+      const input = document.getElementById("passwordInput");
+      if (input.type === "password") {
+        input.type = "text";
+      } else {
+        input.type = "password";
+      }
+    }
+  </script>
+
+</body>
+</html>
