--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   <!-- Password Box -->
   <div class="container" id="loginBox">
-    <h2>🔐 Enter Password</h2>
+    <h2>🔐 Password</h2>
     <div class="input-group">
       <input type="password" id="passwordInput" placeholder="Enter site password"/>
       <span class="eye-icon" onclick="togglePassword()">👁️</span>
@@ -106,7 +106,7 @@
 
   <script>
     function checkPassword() {
-      const correctPassword = "Admin@200998";
+      const correctPassword = "faka@200998";
       const input = document.getElementById("passwordInput").value;
 
       if (input === correctPassword) {
