--- a/index.html
+++ b/index.html
@@ -1,91 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Private Files</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Private Files</title>
 
-<style>
-  /* ===== Chelsea-Blue full-page background ===== */
-  body{
-    margin:0;
-    /* solid blue - change tint any time */
-    background:#034694;
-    font-family:"Segoe UI",sans-serif;
-    color:#fff;
-    display:flex;           /* centre the card */
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-    text-align:center;
-  }
+  <style>
+    body {
+      margin: 0;
+      background: #034694; /* Chelsea Blue */
+      font-family: "Segoe UI", sans-serif;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+    }
 
-  /* ===== black rounded login card ===== */
-  .container{
-    background:#000;        /* solid black */
-    padding:2rem;
-    border-radius:15px;
-    width:90%;
-    max-width:330px;
-    box-shadow:0 0 18px rgba(0,0,0,.7);
-  }
+    .container {
+      background: #000;
+      padding: 2rem;
+      border-radius: 15px;
+      width: 90%;
+      max-width: 330px;
+      box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
+    }
 
-  /* Chelsea badge (optional) */
-  .logo{
-    width:60px;
-    margin-bottom:1rem;
-  }
+    h2 {
+      animation: slide 6s linear infinite alternate;
+      margin-bottom: 1.5rem;
+    }
 
-  /* Slide-in heading */
-  @keyframes slide{
-    from{transform:translateX(-120%);}
-    to{transform:translateX(120%);}
-  }
-  h2{
-    animation:slide 6s linear infinite alternate;
-    margin:0 0 1rem 0;
-  }
+    @keyframes slide {
+      from { transform: translateX(-120%); }
+      to { transform: translateX(120%); }
+    }
 
-  /* password input with eye icon */
-  .input-wrap{position:relative;}
-  input{
-    width:100%; padding:.9rem 3.1rem .9rem .9rem;
-    border:none; border-radius:6px;
-    font-size:1rem;
-    background:#1e1e1e;   /* dark grey/black box */
-    color:#fff;
-  }
-  .eye{
-    position:absolute; right:10px; top:50%;
-    transform:translateY(-50%);
-    cursor:pointer; user-select:none;
-    font-size:1.1rem; color:#aaa;
-  }
+    .input-wrap {
+      position: relative;
+      width: 100%;
+    }
 
-  /* Chelsea-blue button */
-  button{
-    width:100%; margin-top:1.3rem;
-    padding:.9rem;
-    font-size:1rem; color:#fff;
-    background:#0546A0;          /* deeper Chelsea blue */
-    border:none; border-radius:6px;
-    cursor:pointer; transition:background .2s;
-  }
-  button:hover{background:#0a5dc9;}
+    input {
+      width: 100%;
+      padding: 0.9rem 3rem 0.9rem 0.9rem;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      background: #1e1e1e;
+      color: #fff;
+      box-sizing: border-box;
+    }
 
-  /* hidden main area (only shown after correct password) */
-  #main{display:none; padding:2rem;}
-  a{color:#90d8ff;}
-  footer{margin-top:2rem; font-size:.85rem; color:#ffffffaa;}
-</style>
+    .eye {
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      cursor: pointer;
+      user-select: none;
+      font-size: 1.1rem;
+      color: #aaa;
+    }
+
+    button {
+      width: 100%;
+      padding: 0.9rem;
+      font-size: 1rem;
+      margin-top: 1rem;
+      background: #0546A0;
+      color: #fff;
+      border: none;
+      border-radius: 8px; /* Matches input corner */
+      cursor: pointer;
+      transition: background 0.2s ease;
+    }
+
+    button:hover {
+      background: #0a5dc9;
+    }
+
+    #main {
+      display: none;
+      padding: 2rem;
+    }
+
+    a {
+      color: #90d8ff;
+    }
+
+    footer {
+      margin-top: 2rem;
+      font-size: 0.85rem;
+      color: #ffffffaa;
+    }
+  </style>
 </head>
 <body>
 
-  <!-- login card -->
   <div class="container" id="login">
-    <!-- optional logo file chelsea-logo.png -->
-    <!-- <img src="chelsea-logo.png" alt="Chelsea FC" class="logo"> -->
-    <!-- sliding heading -->
     <h2>Password</h2>
 
     <div class="input-wrap">
@@ -96,30 +110,31 @@
     <button onclick="unlock()">Unlock</button>
   </div>
 
-  <!-- private content (kept simple here) -->
   <div id="main">
     <h1>Welcome</h1>
     <p>Your private videos & files are safe here.</p>
     <a href="videos/Screenrecorder-2025-06-07-11-50-02-782.mp4" download>📹 Download My Video</a>
-    <footer>Up&nbsp;the&nbsp;Blues&nbsp;💙</footer>
+    <footer>Up&nbsp;the&nbsp;Blues 💙</footer>
   </div>
 
-<script>
-  const correct = "faka@200998";
+  <script>
+    const correct = "faka@200998";
 
-  function unlock(){
-    const val = document.getElementById("pwd").value;
-    if(val === correct){
-      document.getElementById("login").style.display="none";
-      document.getElementById("main").style.display="block";
-    }else{
-      alert("Wrong password!");
+    function unlock() {
+      const val = document.getElementById("pwd").value;
+      if (val === correct) {
+        document.getElementById("login").style.display = "none";
+        document.getElementById("main").style.display = "block";
+      } else {
+        alert("Wrong Bitch!");
+      }
     }
-  }
-  function toggle(){
-    const inp = document.getElementById("pwd");
-    inp.type = inp.type === "password" ? "text" : "password";
-  }
-</script>
+
+    function toggle() {
+      const inp = document.getElementById("pwd");
+      inp.type = inp.type === "password" ? "text" : "password";
+    }
+  </script>
+
 </body>
 </html>
