--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
   <meta charset="UTF-8">
   <title>Login</title>
   <style>
+    .gif-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  animation: fadeIn 2s ease-in-out;
+}
+
+.zoro-gif {
+  width: 200px;
+  border-radius: 10px;
+  border: 2px solid cyan;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
     body {
       background-color: #004aad;
       display: flex;
@@ -62,9 +85,9 @@
 <body>
 
   <!-- Zoro GIF Box -->
-  <div class="zoro-box">
-    <img src="zoro.gif" alt="Zoro GIF">
-  </div>
+  <div class="gif-container">
+  <img src="zoro.gif" alt="Zoro GIF" class="zoro-gif" />
+</div>
 
   <!-- Password Form -->
   <div class="login-box">
