--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 }
 
 .zoro-gif {
-  width: 200px;
+  width: 100%;
+  max-width: 300px;
+  height: auto;
   border-radius: 10px;
   border: 2px solid cyan;
+  display: block;
+  margin: 0 auto;
 }
 
 @keyframes fadeIn {
