--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       const entered = document.getElementById('pwd').value;
       if(entered === PASS){
         // Redirect to real private page or show content
-        alert("🔓 Correct! (add your redirect here)");
+        alert("Welcome Bastard");
         // example: window.location.href = "dashboard.html";
       }else{
         alert("❌ Wrong Bitch – leave.");
