--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
       const entered = document.getElementById('pwd').value;
       if(entered === PASS){
         // Redirect to real private page or show content
-        alert("Welcome Bastard");
-        // example: window.location.href = "dashboard.html";
+        window.location.href = "dashboard.html";
       }else{
         alert("❌ Wrong Bitch – leave.");
         document.getElementById('pwd').value = "";
