--- a/dashboard.html
+++ b/dashboard.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <title>Your Vault</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Secret Dashboard</title>
+  <style>
+    body {
+      background-color: #111;
+      color: white;
+      font-family: sans-serif;
+      text-align: center;
+      padding-top: 100px;
+    }
+  </style>
 </head>
 <body>
-  <div class="login-box">
-    <h2>Welcome, Admin 👋</h2>
-    <p><strong>Photos, Videos, Documents</strong> below:</p>
-    <ul>
-      <li><a href="media/photo1.jpg">📷 Photo 1</a></li>
-      <li><a href="media/video1.mp4">🎥 Video 1</a></li>
-      <li><a href="media/doc1.pdf">📄 Document 1</a></li>
-    </ul>
-  </div>
+  <h1>Welcome to Secret site</h1>
+  <p>You're through, Welcome</p>
 </body>
 </html>
