--- a/dashboard.html
+++ b/dashboard.html
@@ -1,19 +1,107 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Secret Dashboard</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Secure Storage</title>
   <style>
     body {
-      background-color: #111;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #000;
       color: white;
-      font-family: sans-serif;
+    }
+
+    header {
+      padding: 15px;
+      font-size: 22px;
+      font-weight: bold;
       text-align: center;
-      padding-top: 100px;
+      background-color: #111;
+      border-bottom: 1px solid #333;
+    }
+
+    .container {
+      padding: 10px 20px;
+    }
+
+    .folder {
+      display: flex;
+      align-items: center;
+      padding: 12px 10px;
+      border-bottom: 1px solid #222;
+    }
+
+    .folder img {
+      width: 32px;
+      height: 32px;
+      margin-right: 15px;
+    }
+
+    .folder-text {
+      flex-grow: 1;
+    }
+
+    .folder-name {
+      font-size: 16px;
+      font-weight: 500;
+    }
+
+    .folder-meta {
+      font-size: 13px;
+      color: #aaa;
+    }
+
+    .folder a {
+      color: white;
+      text-decoration: none;
+      width: 100%;
+      display: flex;
+      align-items: center;
+    }
+
+    .arrow {
+      font-size: 18px;
+      color: #555;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to Secret site</h1>
-  <p>You're through, Welcome</p>
+  <header>Storage</header>
+  <div class="container">
+    <!-- Folder Item -->
+    <div class="folder">
+      <a href="https://your-link/photos" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" alt="folder" />
+        <div class="folder-text">
+          <div class="folder-name">Photos</div>
+          <div class="folder-meta">28/11/2023 | 12 items</div>
+        </div>
+        <div class="arrow">›</div>
+      </a>
+    </div>
+
+    <div class="folder">
+      <a href="https://your-link/videos" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" alt="folder" />
+        <div class="folder-text">
+          <div class="folder-name">Videos</div>
+          <div class="folder-meta">29/06/2024 | 5 items</div>
+        </div>
+        <div class="arrow">›</div>
+      </a>
+    </div>
+
+    <div class="folder">
+      <a href="https://your-link/docs" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" alt="folder" />
+        <div class="folder-text">
+          <div class="folder-name">Documents</div>
+          <div class="folder-meta">05/06/2025 | 3 items</div>
+        </div>
+        <div class="arrow">›</div>
+      </a>
+    </div>
+  </div>
 </body>
 </html>
